# rss-agg

./: .coveragerc  .envrc  .envrc.template  .gitignore  .tool-versions  CLAUDE.md  LICENSE  README.md  feeds.txt  lambda_function.py  pyproject.toml  run.sh
.claude/skills/showboat/: SKILL.md
.claude/skills/xc/: SKILL.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  test-job.yml
rss_agg/: asgi.py  cli.py  flask_app_factory.py  logging_config.py  logging_utils.py  read_and_aggregate.py  routes.py  services.py  types.py  web.py
rss_agg/services/: __init__.py  feeds_service.py  fetcher.py  rss_generator.py  rss_parser.py  rss_service.py
rss_agg/services/feeds_services/: base_feeds_service.py  file_feeds_service.py  s3_feeds_service.py
src/rss_agg/: cli.py  domain.py  flask_app_factory.py  web.py
src/rss_agg/services/: __init__.py  fetcher.py  rss_generator.py  rss_parser.py  rss_service.py
src/rss_agg/services/feeds_services/: __init__.py  base_feeds_service.py  file_feeds_service.py  s3_feeds_service.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  run.sh  variables.tf
terraform/modules/api_gateway/: main.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/s3_feeds/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  docker-compose.yml  garage.toml  matchers.py  utils.py
tests/integration/: conftest.py  test_cli.py  test_read_and_aggregate.py  test_web.py
tests/unit/: test_app.py  test_feeds_service.py  test_fetcher.py  test_file_feeds_service.py  test_logging_utils.py  test_rss_generator.py  test_rss_parser.py  test_rss_service.py  test_s3_feeds_service.py  test_web.py
